--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ font-family: 'Aguafina Script', cursive;*/
 
 .header {
 	position: relative;
-  	background: #020915 url(../img/bg_banner.png);
+  	background: #020915 url(../img/bg_banner.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	width: 100%;
